rpi5/iperf3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iperf3
  labels:
    app: iperf3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iperf3
  template:
    metadata:
      name: iperf3
      labels:
        app: iperf3
    spec:
      containers:
        - name: iperf3
          image: networkstatic/iperf3
          imagePullPolicy: IfNotPresent
          command: ["iperf3", "-s"]
          ports:
            - containerPort: 5201
              protocol: TCP
          env: []
          #resources:
          #  requests:
          #    cpu: 250m
          #    memory: 500Mi
          #  limits:
          #    memory: 1Gi
          #livenessProbe:
          #  httpGet:
          #    port: http
          #    path: /ping
          #  initialDelaySeconds: 30
          #  periodSeconds: 30
          #  timeoutSeconds: 5
          #  failureThreshold: 3
          #readinessProbe:
          #  httpGet:
          #    port: http
          #    path: /ping
          #  periodSeconds: 10
          #  timeoutSeconds: 5
          #  failureThreshold: 3
      restartPolicy: Always
