rpi5/iperf3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iperf3
spec:
  selector:
    app: iperf3
  ports:
    - protocol: TCP
      port: 5201
      targetPort: 5201
  type: ClusterIP
